# ft_rtv1

./: CMakeLists.txt  exe
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+22 more)
sources/: ft_functions.c  ft_img.c  ft_img.h  ft_img_init_destr.c  ft_img_keyhook.c  ft_rtv1.h  ft_vector.h  main.c  rt_keyhook.c  rt_light.c  rt_o_cone.c  rt_o_cylinder.c  rt_o_plane.c  rt_o_sphere.c  rt_obj.c  rt_screen_trace.c  rt_sphere.c  vc_cam_code.c  vc_rotation.c  vc_vector_func1.c  vc_vector_func2.c
